Bug 456564 - Accepting an imported transaction is a low-severity action, should rather not require modal confirmation dialog
Summary: Accepting an imported transaction is a low-severity action, should rather not...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: git (master)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-10 21:46 UTC by Dawid Wróbel
Modified: 2024-12-19 10:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2022-07-10 21:46:05 UTC
SUMMARY
Accepting an imported transaction is a low-severity action, should rather not require modal confirmation dialog. The action can be reverted and by itself does not edit the content of the transaction, outside of changing its flag.

STEPS TO REPRODUCE
1. Accept an imported transaction

OBSERVED RESULT
A modal dialog is shown asking to confirm the action

EXPECTED RESULT
Action should be accepted immediately. If needed, it can be reverted either by "Undoing" the action, or by switching its "Imported" flag back on with Transaction -> Mark Transaction As... -> Imported (which currently is *not* one of the items listed there)
Comment 1 Jack 2022-07-10 22:17:27 UTC
I also point out that for consistency, an imported transaction is accepted by editing it or by clicking on the status column to change from not marked to confirmed, neither of which requires confirmation.
Comment 2 Thomas Baumgart 2022-07-11 09:03:10 UTC
Git commit 50edbb240b009f9bb1ac8e66d78371a579a3302b by Thomas Baumgart.
Committed on 11/07/2022 at 06:17.
Pushed by tbaumgart into branch 'master'.

Remove confirmation dialog when accepting imported transactions

M  +1    -11   kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/commit/50edbb240b009f9bb1ac8e66d78371a579a3302b