Remove confirmation dialog when accepting imported transactions

BUG: 456564